--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 <body>
     <h1 id="title">IOT</h1>
     <div id="anim"></div>
-    <!-- <script src="lottie.js"></script>
-    <script src="script.js"></script> -->
+    <script src="lottie.js"></script>
+    <script src="script.js"></script>
     <!-- lottie player can be online or offline -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_cq2ykkjy.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+
 </body>
 
 </html>
